Cascading Change Log

4.0 [unreleased]

  Updated c.o.r.RegexParser to honor declared field types, if any. RegexParser will now coerce parsed String values
  into declared primitive or custom types.

  Fixed minor issue where a Fields.ARGS field declaration would inherit a argument selector not converted to a
  declaration.

  Updated c.s.SourceCall and c.s.SinkCall to allow the parent c.s.Scheme access to the parent c.t.Tap instance.

  Added c.t.l.DirTap to allow for sourcing and sinking local directory trees. DirTap can be used as a replacement for
  c.t.l.FileTap.

  Updated c.t.Tap and c.f.Flow to provide Java 8 Stream instances on sink and source Tap instances. See the new
  c.t.TupleEntryStream and c.t.TupleStream helper classes.

  Update project to use JDK 1.8.

  Update Apache Hadoop to version 2.7.3.

  Removed support for all Apache Hadoop 1.x and prior releases, subsequently removing all sub-project interdependencies
  via symlinks.

3.2.1

  Fixed issue when using a c.p.ConfigDef on a sink c.t.Tap could cause a j.l.ClassCastException.

  Added Apache Tez to output comparison tests.

  Added new convenience methods to c.t.Fields.

3.2.0

  Updated c.s.Scheme with optional #sourceRePrepare() method allowing the Scheme instance to be notified on Input
  instances changes. c.t.TupleEntrySchemeIterator currently allows for an Iterator of Input instances, this method
  allows Scheme to be notified as the Iterator is traversed.

  Fixed issue on Apache Hadoop MapReduce where a c.t.Tap used in both accumulated and streamed roles within a single
  step, but having distinct roles in different pipelines, could not be successfully planned and executed.

  Fixed issue where a triangle of split through a c.p.HashJoin into a c.p.Merge on Apache Tez would fail
  during planning.

  Fixed issue where a triangle of split and joins on Apache Hadoop MapReduce would fail during planning.
